--- a/src/static/admin/accounts.html
+++ b/src/static/admin/accounts.html
@@ -23,7 +23,7 @@
 <body class="skin-blue">
 <!-- header logo: style can be found in header.less -->
 <header class="header">
-    <a href="/admin/index.html" class="logo">
+    <a href="index.html" class="logo">
         <!-- Add the class icon to your logo image or logo icon to add the margining -->
         Raspi-TV
     </a>
@@ -77,7 +77,7 @@
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu">
                 <li class="active">
-                    <a href="/admin/index.html">
+                    <a href="index.html">
                         <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                     </a>
                 </li>
@@ -88,127 +88,51 @@
                         <i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="#dropbox"><i class="fa fa-angle-double-right"></i> Dropbox</a></li>
-                        <li><a href="#twitter"><i class="fa fa-angle-double-right"></i> Twitter</a></li>
-                        <li><a href="/admin/changes.html"><i class="fa fa-angle-double-right"></i>Changes</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="pages/widgets.html">
-                        <i class="fa fa-th"></i> <span>Widgets</span>
-                        <small class="badge pull-right bg-green">new</small>
-                    </a>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-bar-chart-o"></i>
-                        <span>Charts</span>
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="pages/charts/morris.html"><i class="fa fa-angle-double-right"></i> Morris</a></li>
-                        <li><a href="pages/charts/flot.html"><i class="fa fa-angle-double-right"></i> Flot</a></li>
-                        <li><a href="pages/charts/inline.html"><i class="fa fa-angle-double-right"></i> Inline charts</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-laptop"></i>
-                        <span>UI Elements</span>
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="pages/UI/general.html"><i class="fa fa-angle-double-right"></i> General</a></li>
-                        <li><a href="pages/UI/icons.html"><i class="fa fa-angle-double-right"></i> Icons</a></li>
-                        <li><a href="pages/UI/buttons.html"><i class="fa fa-angle-double-right"></i> Buttons</a></li>
-                        <li><a href="pages/UI/sliders.html"><i class="fa fa-angle-double-right"></i> Sliders</a></li>
-                        <li><a href="pages/UI/timeline.html"><i class="fa fa-angle-double-right"></i> Timeline</a></li>
-                    </ul>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-edit"></i> <span>Forms</span>
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="pages/forms/general.html"><i class="fa fa-angle-double-right"></i> General
-                            Elements</a></li>
-                        <li><a href="pages/forms/advanced.html"><i class="fa fa-angle-double-right"></i> Advanced Elements</a>
-                        </li>
-                        <li><a href="pages/forms/editors.html"><i class="fa fa-angle-double-right"></i> Editors</a></li>
-                    </ul>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-table"></i> <span>Tables</span>
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="pages/tables/simple.html"><i class="fa fa-angle-double-right"></i> Simple tables</a>
-                        </li>
-                        <li><a href="pages/tables/data.html"><i class="fa fa-angle-double-right"></i> Data tables</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="pages/calendar.html">
-                        <i class="fa fa-calendar"></i> <span>Calendar</span>
-                        <small class="badge pull-right bg-red">3</small>
-                    </a>
-                </li>
-                <li>
-                    <a href="pages/mailbox.html">
-                        <i class="fa fa-envelope"></i> <span>Mailbox</span>
-                        <small class="badge pull-right bg-yellow">12</small>
-                    </a>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-folder"></i> <span>Examples</span>
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="pages/examples/invoice.html"><i class="fa fa-angle-double-right"></i> Invoice</a></li>
-                        <li><a href="pages/examples/login.html"><i class="fa fa-angle-double-right"></i> Login</a></li>
-                        <li><a href="pages/examples/register.html"><i class="fa fa-angle-double-right"></i> Register</a>
-                        </li>
-                        <li><a href="pages/examples/lockscreen.html"><i class="fa fa-angle-double-right"></i>
-                            Lockscreen</a></li>
-                        <li><a href="pages/examples/404.html"><i class="fa fa-angle-double-right"></i> 404 Error</a></li>
-                        <li><a href="pages/examples/500.html"><i class="fa fa-angle-double-right"></i> 500 Error</a></li>
-                        <li><a href="pages/examples/blank.html"><i class="fa fa-angle-double-right"></i> Blank Page</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-folder"></i> Multilevel Menu
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </a>
-
-                    <ul class="treeview-menu">
-                        <li class="treeview">
-                            <a href="#">
-                                First level
-                                <i class="fa fa-angle-left pull-right"></i>
+                        <li>
+                            <a href="/admin/accounts.html#dropbox">
+                                <i class="fa fa-angle-double-right"></i>Dropbox
                             </a>
-
-                            <ul class="treeview-menu">
-                                <li class="treeview">
-                                    <a href="#">
-                                        Second level
-                                        <i class="fa fa-angle-left pull-right"></i>
-                                    </a>
-
-                                    <ul class="treeview-menu">
-                                        <li>
-                                            <a href="#">Third level</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
+                        </li>
+                        <li>
+                            <a href="/admin/accounts.html#twitter">
+                                <i class="fa fa-angle-double-right"></i>Twitter
+                            </a>
                         </li>
                     </ul>
+                </li>
+                <li>
+                    <a href="/admin/changes.html">
+                        <i class="fa fa-edit"></i> <span>Page information</span>
+                    </a>
+                </li>
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-th"></i>
+                        <span>Ordernation</span>
+                        <i class="fa fa-angle-left pull-right"></i>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li>
+                            <a href="/admin/order-front-end.html">
+                                <i class="fa fa-angle-double-right"></i>Front-end
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/admin/order-dropbox-files.html">
+                                <i class="fa fa-angle-double-right"></i>Dropbox files
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/admin/order-tweets.html">
+                                <i class="fa fa-angle-double-right"></i>Tweets
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="/admin/youtube.html">
+                        <i class="fa fa-youtube"></i> <span>YouTube</span>
+                    </a>
                 </li>
             </ul>
         </section>
@@ -274,70 +198,6 @@
                         <div class="box-body table-responsive no-padding">
                             <table id="twitter-table" class="table table-hover">
                                 <!-- Content goes here -->
-                            </table>
-                        </div>
-                        <!-- /.box-body -->
-                    </div>
-                    <!-- /.box -->
-                </div>
-            </div>
-            <!-- /.Twitter -->
-            <!-- Twitter -->
-            <div id="twitter.old" class="row">
-                <div class="col-xs-12">
-                    <div class="box">
-                        <div class="box-header">
-                            <h3 class="box-title">Twitter</h3>
-
-                            <div class="box-tools">
-                                <div class="input-group">
-                                    <input type="text" name="table_search" class="form-control input-sm pull-right"
-                                           style="width: 150px;" placeholder="Search"/>
-
-                                    <div class="input-group-btn">
-                                        <button class="btn btn-sm btn-default"><i class="fa fa-search"></i></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /.box-header -->
-                        <div class="box-body table-responsive no-padding">
-                            <table class="table table-hover">
-                                <tr>
-                                    <th>Account ID</th>
-                                    <th>Auth Token</th>
-                                    <th>Date</th>
-                                    <th>Status</th>
-                                    <th>Notes</th>
-                                </tr>
-                                <tr>
-                                    <td>183</td>
-                                    <td>John Doe</td>
-                                    <td>11-7-2014</td>
-                                    <td><span class="label label-success">Approved</span></td>
-                                    <td>Bacon ipsum dolor sit amet salami venison chicken flank fatback doner.</td>
-                                </tr>
-                                <tr>
-                                    <td>219</td>
-                                    <td>Jane Doe</td>
-                                    <td>11-7-2014</td>
-                                    <td><span class="label label-warning">Pending</span></td>
-                                    <td>Bacon ipsum dolor sit amet salami venison chicken flank fatback doner.</td>
-                                </tr>
-                                <tr>
-                                    <td>657</td>
-                                    <td>Bob Doe</td>
-                                    <td>11-7-2014</td>
-                                    <td><span class="label label-primary">Approved</span></td>
-                                    <td>Bacon ipsum dolor sit amet salami venison chicken flank fatback doner.</td>
-                                </tr>
-                                <tr>
-                                    <td>175</td>
-                                    <td>Mike Doe</td>
-                                    <td>11-7-2014</td>
-                                    <td><span class="label label-danger">Denied</span></td>
-                                    <td>Bacon ipsum dolor sit amet salami venison chicken flank fatback doner.</td>
-                                </tr>
                             </table>
                         </div>
                         <!-- /.box-body -->
