--- a/src/static/admin/changes.html
+++ b/src/static/admin/changes.html
@@ -23,7 +23,7 @@
 <body class="skin-blue">
 <!-- header logo: style can be found in header.less -->
 <header class="header">
-    <a href="/admin/index.html" class="logo">
+    <a href="index.html" class="logo">
         <!-- Add the class icon to your logo image or logo icon to add the margining -->
         Raspi-TV
     </a>
@@ -77,7 +77,7 @@
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu">
                 <li class="active">
-                    <a href="/admin/index.html">
+                    <a href="index.html">
                         <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                     </a>
                 </li>
@@ -88,131 +88,51 @@
                         <i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="/admin/pages/accounts/accounts.html#dropbox"><i
-                                class="fa fa-angle-double-right"></i> Dropbox</a></li>
-                        <li><a href="/admin/pages/accounts/accounts.html#twitter"><i
-                                class="fa fa-angle-double-right"></i> Twitter</a></li>
-                        <li><a href="/admin/changes.html"><i
-                                class="fa fa-angle-double-right"></i>
-                            Changes</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="../widgets.html">
-                        <i class="fa fa-th"></i> <span>Widgets</span>
-                        <small class="badge pull-right bg-green">new</small>
-                    </a>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-bar-chart-o"></i>
-                        <span>Charts</span>
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="../charts/morris.html"><i class="fa fa-angle-double-right"></i> Morris</a></li>
-                        <li><a href="../charts/flot.html"><i class="fa fa-angle-double-right"></i> Flot</a></li>
-                        <li><a href="../charts/inline.html"><i class="fa fa-angle-double-right"></i> Inline charts</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-laptop"></i>
-                        <span>UI Elements</span>
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="../UI/general.html"><i class="fa fa-angle-double-right"></i> General</a></li>
-                        <li><a href="../UI/icons.html"><i class="fa fa-angle-double-right"></i> Icons</a></li>
-                        <li><a href="../UI/buttons.html"><i class="fa fa-angle-double-right"></i> Buttons</a></li>
-                        <li><a href="../UI/sliders.html"><i class="fa fa-angle-double-right"></i> Sliders</a></li>
-                        <li><a href="../UI/timeline.html"><i class="fa fa-angle-double-right"></i> Timeline</a></li>
-                    </ul>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-edit"></i> <span>Forms</span>
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="../forms/general.html"><i class="fa fa-angle-double-right"></i> General
-                            Elements</a></li>
-                        <li><a href="../forms/advanced.html"><i class="fa fa-angle-double-right"></i> Advanced Elements</a>
-                        </li>
-                        <li><a href="../forms/editors.html"><i class="fa fa-angle-double-right"></i> Editors</a></li>
-                    </ul>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-table"></i> <span>Tables</span>
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="../tables/simple.html"><i class="fa fa-angle-double-right"></i> Simple tables</a>
-                        </li>
-                        <li><a href="../tables/data.html"><i class="fa fa-angle-double-right"></i> Data tables</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="../calendar.html">
-                        <i class="fa fa-calendar"></i> <span>Calendar</span>
-                        <small class="badge pull-right bg-red">3</small>
-                    </a>
-                </li>
-                <li>
-                    <a href="../mailbox.html">
-                        <i class="fa fa-envelope"></i> <span>Mailbox</span>
-                        <small class="badge pull-right bg-yellow">12</small>
-                    </a>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-folder"></i> <span>Examples</span>
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="../examples/invoice.html"><i class="fa fa-angle-double-right"></i> Invoice</a></li>
-                        <li><a href="../examples/login.html"><i class="fa fa-angle-double-right"></i> Login</a></li>
-                        <li><a href="../examples/register.html"><i class="fa fa-angle-double-right"></i> Register</a>
-                        </li>
-                        <li><a href="../examples/lockscreen.html"><i class="fa fa-angle-double-right"></i>
-                            Lockscreen</a></li>
-                        <li><a href="../examples/404.html"><i class="fa fa-angle-double-right"></i> 404 Error</a></li>
-                        <li><a href="../examples/500.html"><i class="fa fa-angle-double-right"></i> 500 Error</a></li>
-                        <li><a href="../examples/blank.html"><i class="fa fa-angle-double-right"></i> Blank Page</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-folder"></i> Multilevel Menu
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </a>
-
-                    <ul class="treeview-menu">
-                        <li class="treeview">
-                            <a href="#">
-                                First level
-                                <i class="fa fa-angle-left pull-right"></i>
+                        <li>
+                            <a href="/admin/accounts.html#dropbox">
+                                <i class="fa fa-angle-double-right"></i>Dropbox
                             </a>
-
-                            <ul class="treeview-menu">
-                                <li class="treeview">
-                                    <a href="#">
-                                        Second level
-                                        <i class="fa fa-angle-left pull-right"></i>
-                                    </a>
-
-                                    <ul class="treeview-menu">
-                                        <li>
-                                            <a href="#">Third level</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
+                        </li>
+                        <li>
+                            <a href="/admin/accounts.html#twitter">
+                                <i class="fa fa-angle-double-right"></i>Twitter
+                            </a>
                         </li>
                     </ul>
+                </li>
+                <li>
+                    <a href="/admin/changes.html">
+                        <i class="fa fa-edit"></i> <span>Page information</span>
+                    </a>
+                </li>
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-th"></i>
+                        <span>Ordernation</span>
+                        <i class="fa fa-angle-left pull-right"></i>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li>
+                            <a href="/admin/order-front-end.html">
+                                <i class="fa fa-angle-double-right"></i>Front-end
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/admin/order-dropbox-files.html">
+                                <i class="fa fa-angle-double-right"></i>Dropbox files
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/admin/order-tweets.html">
+                                <i class="fa fa-angle-double-right"></i>Tweets
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="/admin/youtube.html">
+                        <i class="fa fa-youtube"></i> <span>YouTube</span>
+                    </a>
                 </li>
             </ul>
         </section>
