--- a/src/static/admin/register-dropbox.html
+++ b/src/static/admin/register-dropbox.html
@@ -23,6 +23,20 @@
 <div class="form-box" id="login-box">
     <div class="header">New Dropbox Access Token</div>
     <form action="#" method="post">
+        <div class="body bg-gray send" style="display: none">
+            <div class="form-group">
+                <input id="pincode" type="text" name="pincode" class="form-control" placeholder="Pin Code"/>
+            </div>
+            <div class="form-group">
+                <input id="note" type="text" name="note" class="form-control" placeholder="Note"/>
+            </div>
+        </div>
+        <div class="footer send" style="display: none">
+
+            <button id="send-btn" type="button" class="btn bg-olive btn-block">Send Pin Code</button>
+
+            <a href="accounts.html#twitter" class="text-center">Take me back</a>
+        </div>
         <div class="footer request">
             <button id="request-btn" type="button" class="btn bg-olive btn-block">Request Authentication Token</button>
             <a href="accounts.html#dropbox" class="text-center">Take me back</a>
