Weather ID Fix in Admin Page

--- a/src/static/admin/changes.html
+++ b/src/static/admin/changes.html
@@ -196,7 +196,7 @@
                                     <th>Weather Location</th>
                                     <td>
                                         <div class="input-group" >
-                                            <input  type="text" size="80" class="form-control" aria-describedby="basic-addon1" id="weather">
+                                            <input  type="text" size="80" class="form-control" aria-describedby="basic-addon1" id="weatherR">
                                         </div>
                                     </td>
                                 </tr>
