--- a/src/static/admin/index.html
+++ b/src/static/admin/index.html
@@ -165,7 +165,7 @@
 
         <!-- Main content -->
         <section class="content">
-            <div class="row">
+            <div class="row" style="text-align: center;">
                 <img src="/admin/img/raspi.png"/>
             </div>
         </section>
