--- a/src/static/admin/index.html
+++ b/src/static/admin/index.html
@@ -166,7 +166,7 @@
         <!-- Main content -->
         <section class="content">
             <div class="row" style="text-align: center;">
-                <img src="/admin/img/raspi.png"/>
+                <img class="img-responsive" src="/admin/img/raspi.png"/>
             </div>
         </section>
 
