Updated admin pages.

--- a/src/static/admin/youtube.html
+++ b/src/static/admin/youtube.html
@@ -152,7 +152,7 @@
             </h1>
             <ol class="breadcrumb">
                 <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-                <li class="active">Accounts</li>
+                <li class="active">YouTube</li>
             </ol>
         </section>
 
