--- a/src/static/admin/changes.html
+++ b/src/static/admin/changes.html
@@ -149,7 +149,7 @@
             </h1>
             <ol class="breadcrumb">
                 <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-                <li class="active">Accounts</li>
+                <li class="active">Page Information</li>
             </ol>
         </section>
 
