--- a/src/static/admin/order-dropbox-files.html
+++ b/src/static/admin/order-dropbox-files.html
@@ -151,8 +151,8 @@
                     </h1>
                     <ol class="breadcrumb">
                         <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-                        <li><a href="#">Tables</a></li>
-                        <li class="active">Data tables</li>
+                        <li><a href="#">Ordenation</a></li>
+                        <li class="active">Dropbox</li>
                     </ol>
                 </section>
 
@@ -205,6 +205,8 @@
         <script src="/admin/js/bootstrap.min.js" type="text/javascript"></script>
         <!-- AdminLTE App -->
         <script src="/admin/js/AdminLTE/app.js" type="text/javascript"></script>
+
+        <script src="/admin/js/admin.js" type="text/javascript"></script>
 
         <script src="/admin/js/jquery-ui-1.10.3.js"></script>
 
