--- a/src/static/admin/changes.html
+++ b/src/static/admin/changes.html
@@ -172,7 +172,8 @@
                                     <th>Location</th>
                                     <td>
                                         <div class="input-group">
-                                            <input type="text" size="80" class="form-control" aria-describedby="basic-addon1" id="location">
+                                            <input type="text" size="80" class="form-control"
+                                                   aria-describedby="basic-addon1" id="location">
                                         </div>
                                     </td>
                                 </tr>
@@ -180,7 +181,8 @@
                                     <th>Location Description</th>
                                     <td>
                                         <div class="input-group ">
-                                            <input type="text" size="80" class="form-control" aria-describedby="basic-addon1" id="location_description">
+                                            <input type="text" size="80" class="form-control"
+                                                   aria-describedby="basic-addon1" id="location_description">
                                         </div>
                                     </td>
                                 </tr>
@@ -195,31 +197,33 @@
                                 <tr>
                                     <th>Weather Location</th>
                                     <td>
-                                        <div class="input-group" >
-                                            <input  type="text" size="80" class="form-control" aria-describedby="basic-addon1" id="weatherR">
+                                        <div class="input-group">
+                                            <input type="text" size="80" class="form-control"
+                                                   aria-describedby="basic-addon1" id="weatherR">
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <th>Feed Source</th>
                                     <td>
-                                        <div class="input-group" >
-                                            <input  type="text" size="80" class="form-control" aria-describedby="basic-addon1" id="feed">
+                                        <div class="input-group">
+                                            <input type="text" size="80" class="form-control"
+                                                   aria-describedby="basic-addon1" id="feed">
                                         </div>
                                     </td>
                                 </tr>
                             </table>
                             <div>
-                                    <button id="save_btn" type="submit"
-                                            class="btn-lg bg-blue btn-block">Save Changes
-                                    </button>
+                                <button id="save_btn" type="submit"
+                                        class="btn-lg bg-blue btn-block">Save Changes
+                                </button>
                             </div>
                         </div>
                         <!-- /.box-body -->
                     </div>
                     <!-- /.box -->
                 </div>
-                
+
             </div>
         </section>
         <!-- /.content -->
