--- a/src/static/demo/index.html
+++ b/src/static/demo/index.html
@@ -35,6 +35,7 @@
                 startTime()
             }, 500);
         }
+
     </script>
 </head>
 <body class="skin-blue" onload="startTime();">
@@ -84,7 +85,9 @@
                     <!-- /.box -->
                 </li>
                 <li id="sidebar-footer" class="active" style="border-bottom: none;">
-                    <div style="box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);"><img src="../QR/fb.png" style="max-width: 50%"><img src="../QR/ua.png" style="max-width: 50%"></div>
+                    <div style="box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);"><img src="../QR/fb.png"
+                                                                                style="max-width: 50%"><img
+                            src="../QR/ua.png" style="max-width: 50%"></div>
                 </li>
                 <li class="active">
 
@@ -105,16 +108,17 @@
                     <div class="box box-danger" id="loading-example">
                         <div class="box-header">
                             <i class="fa fa-video-camera"></i>
+
                             <h3 class="box-title">Video Header</h3>
                         </div>
                         <!-- /.box-header -->
                         <div class="box-body no-padding">
                             <video controls style="max-width: 100%">
-                                        <source src="http://iurevych.github.com/Flat-UI-videos/big_buck_bunny.mp4"
-                                                type="video/mp4">
-                                        <source src="http://iurevych.github.com/Flat-UI-videos/big_buck_bunny.webm"
-                                                type="video/webm">
-                                    </video>
+                                <source src="http://iurevych.github.com/Flat-UI-videos/big_buck_bunny.mp4"
+                                        type="video/mp4">
+                                <source src="http://iurevych.github.com/Flat-UI-videos/big_buck_bunny.webm"
+                                        type="video/webm">
+                            </video>
                         </div>
                         <!-- /.box-body -->
                         <div class="box-footer">
@@ -130,6 +134,7 @@
                     <div class="box box-primary">
                         <div class="box-header">
                             <i class="fa fa-rss"></i>
+
                             <h3 class="box-title"> News Header</h3>
                         </div>
                         <!-- /.box-header -->
