--- a/app/static/admin/pages/pages_example.html
+++ b/app/static/admin/pages/pages_example.html
@@ -11,18 +11,18 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.5 -->
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="dist/css/AdminLTE.min.css">
+    <link rel="stylesheet" href="../dist/css/AdminLTE.min.css">
     <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
           page. However, you can choose any other skin. Make sure you
           apply the skin class to the body tag so the changes take effect.
     -->
-    <link rel="stylesheet" href="dist/css/skins/skin-blue.min.css">
+    <link rel="stylesheet" href="../dist/css/skins/skin-blue.min.css">
     <!-- Specific stylesheets for Raspi-TV -->
     <!--<link href="css/raspi-tv.css" rel="stylesheet">-->
 
@@ -60,7 +60,7 @@ desired effect
     <header class="main-header">
 
         <!-- Logo -->
-        <a href="index.html" class="logo">
+        <a href="../index.html" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
             <span class="logo-mini"><b>A</b>LT</span>
             <!-- logo for regular state and mobile devices -->
@@ -94,7 +94,7 @@ desired effect
                             <!-- Menu Footer-->
                             <li class="user-footer">
                                 <div class="pull-left">
-                                    <a href="pages/profile.html" class="btn btn-default btn-flat">Profile</a>
+                                    <a href="profile.html" class="btn btn-default btn-flat">Profile</a>
                                 </div>
                                 <div class="pull-right">
                                     <a href="/auth/logout" class="btn btn-default btn-flat">Sign out</a>
@@ -116,7 +116,7 @@ desired effect
             <ul class="sidebar-menu">
                 <!-- Header -->
                 <li class="active">
-                    <a href="index.html">
+                    <a href="../index.html">
                         <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                     </a>
                 </li>
@@ -129,12 +129,12 @@ desired effect
                     </a>
                     <ul class="treeview-menu">
                         <li>
-                            <a href="pages/accounts.html#dropbox">
+                            <a href="accounts.html#dropbox">
                                 <i class="fa fa-angle-double-right"></i>Dropbox
                             </a>
                         </li>
                         <li>
-                            <a href="pages/accounts.html#twitter">
+                            <a href="accounts.html#twitter">
                                 <i class="fa fa-angle-double-right"></i>Twitter
                             </a>
                         </li>
@@ -142,7 +142,7 @@ desired effect
                 </li>
                 <!-- Page information -->
                 <li>
-                    <a href="pages/changes.html">
+                    <a href="changes.html">
                         <i class="fa fa-edit"></i> <span>Page information</span>
                     </a>
                 </li>
@@ -155,17 +155,17 @@ desired effect
                     </a>
                     <ul class="treeview-menu">
                         <li>
-                            <a href="pages/order-front-end.html">
+                            <a href="order-front-end.html">
                                 <i class="fa fa-angle-double-right"></i>Front-end
                             </a>
                         </li>
                         <li>
-                            <a href="pages/order-dropbox-files.html">
+                            <a href="order-dropbox-files.html">
                                 <i class="fa fa-angle-double-right"></i>Dropbox files
                             </a>
                         </li>
                         <li>
-                            <a href="pages/order-tweets.html">
+                            <a href="order-tweets.html">
                                 <i class="fa fa-angle-double-right"></i>Tweets
                             </a>
                         </li>
@@ -173,7 +173,7 @@ desired effect
                 </li>
                 <!-- Youtube -->
                 <li>
-                    <a href="pages/youtube.html">
+                    <a href="youtube.html">
                         <i class="fa fa-youtube"></i> <span>YouTube</span>
                     </a>
                 </li>
@@ -221,12 +221,12 @@ desired effect
 <!-- REQUIRED JS SCRIPTS -->
 
 <!-- jQuery 2.1.4 -->
-<script src="plugins/jQuery/jQuery-2.1.4.min.js"></script>
+<script src="../plugins/jQuery/jQuery-2.1.4.min.js"></script>
 <!-- Bootstrap 3.3.5 -->
-<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="../bootstrap/js/bootstrap.min.js"></script>
 <!-- AdminLTE App -->
-<script src="dist/js/app.min.js"></script>
+<script src="../dist/js/app.min.js"></script>
 <!-- Specific functions for Raspi-TV -->
-<script src="js/raspi-tv.js"></script>
+<script src="../js/raspi-tv.js"></script>
 </body>
 </html>
