--- a/app/static/admin/pages/accounts.html
+++ b/app/static/admin/pages/accounts.html
@@ -187,19 +187,67 @@ desired effect
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1>
-                Page Header
-                <small>Optional description</small>
+                Accounts
+                <small>Add new Dropbox/Twitter accounts</small>
             </h1>
             <ol class="breadcrumb">
-                <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-                <li class="active">Dashboard</li>
+                <li><a href="../index.html"><i class="fa fa-dashboard"></i> Home</a></li>
+                <li class="active">Accounts</li>
             </ol>
         </section>
 
         <!-- Main content -->
         <section class="content">
-            <!-- Your Page Content Here -->
-            Something should definitely go in here...
+            <!-- Dropbox -->
+            <div id="dropbox" class="row">
+                <div class="col-xs-12">
+                    <div class="box">
+                        <div class="box-header">
+                            <h3 class="box-title">Dropbox</h3>
+
+                            <div class="box-tools">
+                                <div class="pull-right">
+                                    <a href="register-dropbox.html"><i class="fa fa-plus"></i> New account</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /.box-header -->
+                        <div class="box-body table-responsive no-padding">
+                            <table id="dropbox-table" class="table table-hover">
+                                <!-- Content goes here -->
+                            </table>
+                        </div>
+                        <!-- /.box-body -->
+                    </div>
+                    <!-- /.box -->
+                </div>
+            </div>
+            <!-- /.Dropbox -->
+            <!-- Twitter -->
+            <div id="twitter" class="row">
+                <div class="col-xs-12">
+                    <div class="box">
+                        <div class="box-header">
+                            <h3 class="box-title">Twitter</h3>
+
+                            <div class="box-tools">
+                                <div class="pull-right">
+                                    <a href="register-twitter.html"><i class="fa fa-plus"></i> New account</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /.box-header -->
+                        <div class="box-body table-responsive no-padding">
+                            <table id="twitter-table" class="table table-hover">
+                                <!-- Content goes here -->
+                            </table>
+                        </div>
+                        <!-- /.box-body -->
+                    </div>
+                    <!-- /.box -->
+                </div>
+            </div>
+            <!-- /.Twitter -->
         </section><!-- /.content -->
     </div><!-- /.content-wrapper -->
 
